# ape

./: .gitignore  CMakeLists.txt  README.md  Readme.md
Ape/: CMakeLists.txt
Ape/Asset/: CMakeLists.txt
Ape/Asset/src/: Mesh.cpp  Model.cpp  Shape.cpp  Vertex.cpp
Ape/AssetLoader/: CMakeLists.txt
Ape/AssetLoader/src/: AssetLoader.cpp  MaterialLoader.cpp  MeshLoader.cpp  ModelPartImporter.cpp  TextureCache.cpp
Ape/BufferObject/: CMakeLists.txt
Ape/BufferObject/src/: ElementBufferObject.cpp  FrameBufferObject.cpp  RenderBufferObject.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  VertexLayout.cpp
Ape/Effect/: CMakeLists.txt
Ape/Effect/src/: EffectCollection.cpp  EffectCollectionPopulator.cpp  EffectRenderer.cpp  EffectSelector.cpp  EffectShaderProgram.cpp  PlainQuad.cpp  PlainQuadVertex.cpp
Ape/Engine/: CMakeLists.txt
Ape/Engine/Engine/: CMakeLists.txt
Ape/Engine/FrameProfiling/: CMakeLists.txt
Ape/Engine/GlfwEngine/: CMakeLists.txt
Ape/Engine/Initialization/: CMakeLists.txt
Ape/Engine/InspectionOverlay/: CMakeLists.txt
Ape/Engine/QtEngine/: CMakeLists.txt
Ape/Engine/UpdateHandling/: CMakeLists.txt
Ape/Engine/src/: BodyPointLightSynchronizer.cpp  BodyRenderer.cpp  BodySelector.cpp  CameraViewSensor.cpp  FrameRateTracker.cpp  SceneRenderer.cpp  ShapeArrayObjectRenderer.cpp  ShapeBufferObjectRenderer.cpp  StandardInputHandler.cpp  StandardShaderProgram.cpp  TimeIntervalTracker.cpp  WireframeShaderProgram.cpp
Ape/GlfwEngine/: CMakeLists.txt
Ape/GlfwEngine/src/: GLFWEngine.cpp  GLFWGateway.cpp  GLFWWindow.cpp
Ape/GpuResource/: CMakeLists.txt
Ape/GpuResource/docs/: Readme.md
Ape/GpuResource/src/: CubeTexture.cpp  CubeTextureReader.cpp  ElementBufferObject.cpp  FileFinder.cpp  FrameBufferObject.cpp  PixelType.cpp  RenderBufferObject.cpp  Shader.cpp  ShaderBuilder.cpp  ShaderPreprocessor.cpp  ShaderProgram.cpp  ShaderReader.cpp  Texture.cpp  TextureFormat.cpp  TextureImage.cpp  TextureImageFormat.cpp  TextureInternalFormat.cpp  TextureReader.cpp  TextureWrapping.cpp  Uniform.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  VertexLayout.cpp
Ape/Initialization/: CMakeLists.txt
Ape/Initialization/src/: Initialization.cpp  OpenGLLoader.cpp
Ape/InputHandling/: CMakeLists.txt
Ape/InputHandling/src/: CameraManipulator.cpp  CameraSightMouseDriver.cpp  MovementTracker.cpp  StandardInputHandler.cpp
Ape/Lighting/: CMakeLists.txt
Ape/Lighting/src/: DepthBodyRenderer.cpp  DepthMapping.cpp  LightSystemView.cpp  LightingBodyRenderer.cpp  LightingShaderProgram.cpp  MonoDepthBodyRenderer.cpp  MonoDepthMap.cpp  MonoDepthShaderProgram.cpp  OmniDepthBodyRenderer.cpp  OmniDepthMap.cpp  OmniDepthShaderProgram.cpp
Ape/Model/: CMakeLists.txt
Ape/Model/src/: BoxBuilder.cpp  Mesh.cpp  Model.cpp  ModelPart.cpp  Shape.cpp  ShapeVertex.cpp  Vertex.cpp  VertexLayout.cpp
Ape/QtEngine/: CMakeLists.txt
Ape/QtEngine/src/: QtEngine.cpp  QtGateway.cpp  QtWindow.cpp
Ape/Rendering/: CMakeLists.txt
Ape/Rendering/Culling/: CMakeLists.txt
Ape/Rendering/Effect/: CMakeLists.txt
Ape/Rendering/GpuProfiling/: CMakeLists.txt
Ape/Rendering/Lighting/: CMakeLists.txt
Ape/Rendering/Rendering/: CMakeLists.txt
Ape/Rendering/Skybox/: CMakeLists.txt
Ape/Rendering/Wireframe/: CMakeLists.txt
Ape/Rendering/src/: DepthBodyRenderer.cpp  DepthMap.cpp  DepthMapping.cpp  DepthShaderProgram.cpp  EffectCollection.cpp  EffectCollectionPopulator.cpp  EffectCollectionReader.cpp  EffectRenderer.cpp  EffectSelector.cpp  EffectShaderProgram.cpp  FlatQuad.cpp  FlatQuadShaderProgram.cpp  FlatQuadVertex.cpp  FlatTextureRenderer.cpp  LightSystemView.cpp  LightingView.cpp  LineStyleProvider.cpp  MonoDepthBodyRenderer.cpp  MonoDepthMap.cpp  MonoDepthShaderProgram.cpp  OffscreenSurface.cpp  OmniDepthBodyRenderer.cpp  OmniDepthMap.cpp  OmniDepthShaderProgram.cpp  OutlinedBodyRenderer.cpp  PlainCube.cpp  PlainCubeVertex.cpp  PlainQuad.cpp  (+14 more)
Ape/Scene/: CMakeLists.txt
Ape/Shader/: CMakeLists.txt
Ape/Shape/: CMakeLists.txt
Ape/Skybox/: CMakeLists.txt
Ape/Texture/: CMakeLists.txt
Ape/UpdateHandling/: CMakeLists.txt
Ape/Windowing/: CMakeLists.txt
Ape/Wireframe/: CMakeLists.txt
Ape/World/: CMakeLists.txt
Ape/cmake/: Dependencies.cmake
Ape/docs/: Backlog.md  Build.md  Dependencies.md
Ape/src/: AssetLoader.cpp  BlinnPhongKeySwitcher.cpp  Body.cpp  BodyPart.cpp  BodyPointLightSynchronizer.cpp  BoxBuilder.cpp  BufferObject.cpp  Camera.cpp  CameraManipulator.cpp  CameraSelector.cpp  CameraSightMouseDriver.cpp  CameraSpotLightSynchronizer.cpp  CameraViewSensor.cpp  ElementBufferObject.cpp  Engine.cpp  FrameRateTracker.cpp  FrameTimeTracker.cpp  GLFWGateway.cpp  GLFWInitializer.cpp  GLFWWindow.cpp  MaterialLoader.cpp  Mesh.cpp  MeshLoader.cpp  Model.cpp  ModelPart.cpp  ModelPartImporter.cpp  MouseTracker.cpp  MovementTracker.cpp  OpenGLGateway.cpp  OpenGLLoader.cpp  SceneRenderer.cpp  ScopedSignalConnection.cpp  ShaderProgram.cpp  Shape.cpp  SpotLightOrientator.cpp  StandardInputHandler.cpp  StandardShaderProgram.cpp  Stopwatch.cpp  Texture.cpp  TextureDescriptor.cpp  (+5 more)
Basix/: CMakeLists.txt
Basix/Container/: CMakeLists.txt
Basix/FileSystem/: CMakeLists.txt
Basix/Logging/: CMakeLists.txt
Basix/Memory/: CMakeLists.txt
Basix/Meta/: CMakeLists.txt
Basix/Profiling/: CMakeLists.txt
Glad/: CMakeLists.txt
Glad/src/: glad.c
QtTestApp/: CMakeLists.txt
QtTestApp/include/: MainWindow.hpp  SceneWidget.hpp  TableModel.hpp  WidgetWindow.hpp
QtTestApp/project/: ModelViewTest.pro
QtTestApp/src/: Main.cpp  MainWindow.cpp  SceneWidget.cpp  TableModel.cpp  WidgetWindow.cpp
QtWindow/: CMakeLists.txt
QtWindow/src/: SceneWidget.cpp
Stb/: CMakeLists.txt
TestApp/: CMakeLists.txt
TestApp/include/: Application.hpp  SampleAssetBuilder.hpp  SampleAssetCollection.hpp  SampleInputHandler.hpp  SampleScene.hpp  SampleSceneBuilder.hpp
TestApp/src/: Application.cpp  Main.cpp  SampleAssetBuilder.cpp  SampleInputHandler.cpp  SampleSceneBuilder.cpp
TestScene/: CMakeLists.txt
TestScene/src/: SampleAssetBuilder.cpp  SampleInputHandler.cpp  SampleSceneBuilder.cpp
(+1644 files in other folders)
