CreatePackage(Ape)

add_subdirectory(AssetLoader)

add_subdirectory(GlfwEngine)

add_subdirectory(GpuResource)

add_subdirectory(Initialization)

add_subdirectory(Model)

add_subdirectory(QtEngine)

add_subdirectory(Rendering)

add_subdirectory(Scene)

add_subdirectory(UpdateHandling)

add_subdirectory(Windowing)
