CreatePackage(Ape)

add_subdirectory(AssetLoader)

add_subdirectory(Effect)

add_subdirectory(GlfwEngine)

add_subdirectory(Initialization)

add_subdirectory(Lighting)

add_subdirectory(Model)

add_subdirectory(QtEngine)

add_subdirectory(Rendering)

add_subdirectory(Scene)

add_subdirectory(Shape)

add_subdirectory(Skybox)

add_subdirectory(UpdateHandling)

add_subdirectory(Windowing)

add_subdirectory(Wireframe)
