CreatePackage(Basix)

add_subdirectory(CompilerSupport)

add_subdirectory(Container)

add_subdirectory(FileSystem)

add_subdirectory(Mathematics)

add_subdirectory(Memory)

add_subdirectory(Meta)

add_subdirectory(Profiling)

add_subdirectory(Range)

add_subdirectory(Signal)

add_subdirectory(Text)

add_subdirectory(Time)
